share/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erp-security
  labels:
    name: erp-security
    tier: security
    environment: production
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: erp-uno
    meta.helm.sh/release-namespace: default
---
apiVersion: v1
kind: Namespace
metadata:
  name: erp-ai
  labels:
    name: erp-ai
    tier: application
    environment: production
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: erp-uno
    meta.helm.sh/release-namespace: default
---
apiVersion: v1
kind: Namespace
metadata:
  name: erp-telemetry
  labels:
    name: erp-telemetry
    tier: observability
    environment: production
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: erp-uno
    meta.helm.sh/release-namespace: default
---
apiVersion: v1
kind: Namespace
metadata:
  name: erp-infra
  labels:
    name: erp-infra
    tier: infrastructure
    environment: production
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: erp-uno
    meta.helm.sh/release-namespace: default
---
apiVersion: v1
kind: Namespace
metadata:
  name: erp-apps
  labels:
    name: erp-apps
    tier: application
    environment: production
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: erp-uno
    meta.helm.sh/release-namespace: default
---
apiVersion: v1
kind: Namespace
metadata:
  name: erp-services
  labels:
    name: erp-services
    tier: application
    environment: production
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: erp-uno
    meta.helm.sh/release-namespace: default
